# netbox-credentials

./: README.md  pyproject.toml
netbox_credentials/: __init__.py  crypto.py  filtersets.py  forms.py  models.py  navigation.py  search.py  tables.py  template_content.py  urls.py  views.py
netbox_credentials/api/: serializers.py  urls.py  views.py
netbox_credentials/migrations/: 0001_initial.py  0002_pluginsetting.py  0003_alter_model_options.py
netbox_credentials/templates/netbox_credentials/: bulk_assign.html  credential.html  devicecredential.html  settings.html
netbox_credentials/templates/netbox_credentials/inc/: device_credentials_panel.html
