[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-credentials"
version = "0.1.0"
description = "NetBox Credentials Plugin"
requires-python = ">=3.10"
dependencies = [
    "cryptography",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_credentials*"]
